--- a/ai/Ditto/index.html
+++ b/ai/Ditto/index.html
@@ -156,7 +156,7 @@
         </div>
 
         <footer style="text-align: center; font-size: medium; color: blueviolet;">
-            <span id="busuanzi_container_site_pv">Page Views: <span id="busuanzi_value_site_pv"></span></span>
+            <span id="busuanzi_container_page_pv">Page Views: <span id="busuanzi_value_page_pv"></span></span>
         </footer>
 
     </body>
