--- a/ai/Ditto/index.html
+++ b/ai/Ditto/index.html
@@ -36,7 +36,7 @@
             <div class="column-flex">
                 <div class="flex flex-gap" style="margin-bottom:0.5em;">
                     <a target="_blank" href="https://arxiv.org/abs/2411.19509" ><button><i class="ai ai-arxiv"></i> Paper</button></a>
-                    <a target="_blank" href=""><button><i class="fa fa-github"></i> Code (coming soon)</button></a>
+                    <a target="_blank" href="https://github.com/antgroup/ditto-talkinghead"><button><i class="fa fa-github"></i> Code</button></a>
                 </div>
             </div>
 
